k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pomodoro-ingress
spec:
  rules:
    - http:
        paths:
          - path: /api/index        # шлях по якому відбувається перенаправлення на сервіс
            pathType: Prefix           # все, що починається з `/api` буде направлено на сервіс pomodoro-service. Альтернативно можна використовувати `Exact` та `ImplementationSpecific`
            backend:
              service:
                name: root-service # ім'я сервісу
                port:
                  number: 80           # порт на якому запущено сервіс
          - path: /api/authorization
            pathType: Prefix
            backend:
              service:
                name: authorization-service
                port:
                  number: 80
          - path: /api/site
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                  number: 80
